hard-gists/c42d76db2ad2e87a5086/run.log
=== Docker Run Log for c42d76db2ad2e87a5086 ===
Started at: Mi 29. Okt 19:52:51 CET 2025

[2025-10-29 19:52:51] START: Running container for c42d76db2ad2e87a5086
[2025-10-29 19:52:51] SUCCESS: Container 3e1d9e316ed5ba7eb50711ae5cb6cdff56255927e8f36aa841fe40d0dec80f53 started for c42d76db2ad2e87a5086
=== Container logs for c42d76db2ad2e87a5086 ===
  File "/snippet.py", line 23
    print "event wait"                                                   
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c42d76db2ad2e87a5086 ===
[2025-10-29 19:52:53] INFO: Container 3e1d9e316ed5ba7eb50711ae5cb6cdff56255927e8f36aa841fe40d0dec80f53 has stopped
